--- a/src/app/device-app/device-app.component.html
+++ b/src/app/device-app/device-app.component.html
@@ -1,17 +1,17 @@
-<div class="col-sm-4">
+<div class="col-sm-4 well">
     <div style="height:300px;overflow:auto;">
-        <table class='table table-hover table-condensed'>
+        <table class='table table-hover'>
           <tr *ngFor="let device of devices">
             <td (click)='selectDevice(device)'>{{device.name}}</td>
           </tr>
         </table>
     </div>
-    <button class='btn btn-success'>
+    <button type="button" class='btn btn-success'>
         <span class="glyphicon glyphicon-plus"></span>
         Add New Device
     </button>
 </div>
-<div class="col-sm-4">
+<div class="col-sm-4 well">
     <table class="table table-bordered">
         <tr>
             <td colspan='2'>{{selectedDevice.name}}</td>
@@ -54,6 +54,8 @@
 
     </table>
 </div>
-<div class="col-sm-4">
-map
+<div class="col-sm-4 well">
+    <img style="max-width:100%" src="assets/map.png"/>
+    <p><b>Location Description: </b></p>
+    <p>{{selectedDevice.locationDescription}}</p>
 </div>
