--- a/src/app/device-app/device-app.component.html
+++ b/src/app/device-app/device-app.component.html
@@ -1,29 +1,31 @@
 <div class="col-sm-4 well">
     <div style="height:300px;overflow:auto;">
         <table class='table table-hover'>
-          <tr *ngFor="let device of devices">
+          <tr *ngFor="let device of devices" [class.info]="selectedDevice == device">
             <td (click)='selectDevice(device)'>{{device.name}}</td>
           </tr>
         </table>
     </div>
-    <button type="button" class='btn btn-success'>
+    <button type="button" class='btn btn-success' data-toggle="modal" data-target="#addDeviceModal">
         <span class="glyphicon glyphicon-plus"></span>
         Add New Device
     </button>
 </div>
 <div class="col-sm-4 well">
     <table class="table table-bordered">
-        <tr>
+        <tr [class.danger]="!selectedDevice.functional">
             <td colspan='2'>{{selectedDevice.name}}</td>
         </tr>
-        <tr>
+        <tr [class.danger]="!selectedDevice.functional">
             <td>Status: </td>
             <td>
                 <p *ngIf="selectedDevice.functional">ON</p>
                 <p *ngIf="!selectedDevice.functional">OFF</p>
             </td>
         </tr>
-        <tr>
+        <tr [class.success]="selectedDevice.led == 'Green'"
+            [class.warning]="selectedDevice.led == 'Yellow'"
+            [class.danger]="selectedDevice.led == 'Red'">
             <td>LED</td>
             <td>{{selectedDevice.led}}</td>
         </tr>
@@ -58,4 +60,37 @@
     <img style="max-width:100%" src="assets/map.png"/>
     <p><b>Location Description: </b></p>
     <p>{{selectedDevice.locationDescription}}</p>
+</div>
+
+<div class="modal fade" id="addDeviceModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Add New Device</h4>
+      </div>
+      <div class="modal-body">
+      	<div class="form-group"> 
+			<label class="control-label">Name</label>
+			<input class="form-control"/>
+		</div>
+		<div class="form-group"> 
+			<label class="control-label">Lat Lng</label>
+			<input class="form-control"/>
+		</div>
+		<div class="form-group"> 
+			<label class="control-label">Location Description</label>
+			<input class="form-control"/>
+		</div>
+		<div class="form-group"> 
+			<label class="control-label">Device ID</label>
+			<input class="form-control"/>
+		</div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Add Device</button>
+      </div>
+    </div>
+  </div>
 </div>
