Implement mock adding

--- a/src/app/device-app/device-app.component.html
+++ b/src/app/device-app/device-app.component.html
@@ -89,7 +89,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Add Device</button>
+        <button (click)="addDevice()" type="button" class="btn btn-primary" data-dismiss="modal">Add Device</button>
       </div>
     </div>
   </div>
